Archivo openapi completado, inicio de implementaciond de auth
